--- a/src/Watts Happening/res/values/strings.xml
+++ b/src/Watts Happening/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_activity_watts_happening">WattsHappening</string>
     <string name="start_button">Start Monitor</string>
     <string name="stop_button">Stop Monitor</string>
+    <string name="start_GPS_button">Start GPS</string>
+    <string name="stop_GPS_button">Stop GPS</string>
 
 </resources>
