added in reference to zhang paper and removed compiled files from repo

--- a/docs/draft/references.bib
+++ b/docs/draft/references.bib
@@ -156,5 +156,22 @@
   year = 2010
 }
 
+@inproceedings{Zhang:2010:AOP:1878961.1878982,
+ author = {Zhang, Lide and Tiwana, Birjodh and Qian, Zhiyun and Wang, Zhaoguang and Dick, Robert P. and Mao, Zhuoqing Morley and Yang, Lei},
+ title = {Accurate online power estimation and automatic battery behavior based power model generation for smartphones},
+ booktitle = {Proceedings of the eighth IEEE/ACM/IFIP international conference on Hardware/software codesign and system synthesis},
+ series = {CODES/ISSS '10},
+ year = {2010},
+ isbn = {978-1-60558-905-3},
+ location = {Scottsdale, Arizona, USA},
+ pages = {105--114},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1878961.1878982},
+ doi = {10.1145/1878961.1878982},
+ acmid = {1878982},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {battery, mobile phones, power modeling},
+}
 
 
