--- a/docs/draft/related.tex
+++ b/docs/draft/related.tex
@@ -1,5 +1,5 @@
 \section*{Related Work}
-Zwang et al./cite{} created a similar program in 2010 called PowerTutor that receives a power estimate to various hardware components and application and then assigns power usage to specific applications.  
+Zwang et al.\cite{Zhang:2010:AOP:1878961.1878982} created a similar program in 2010 called PowerTutor that receives a power estimate to various hardware components and application and then assigns power usage to specific applications.  
 They created the benchmarks using a previous project call PowerBooter that monitored power consumption while controlling power management for individual components.  
 PowerTutor ultimately allows developers to determine the impact of their own application to improve their software designs.  
 Future work could seek to incorporate PowerTutor into Watt's Happening to fine-tune application usage details and improve recommendations.
