no changes here_ignore

--- a/docs/draft/intro.tex
+++ b/docs/draft/intro.tex
@@ -2,7 +2,7 @@
 Mobile devices, including smart phones and tablets, are capable of performing an ever-increasing array of tasks. 
 Unfortunately, short battery life severely limits the full potential of smart phones. 
 A user may experience erratic power surges based on different applications and might not know if her phone will last until the end of the day. 
-While power analyzing applications exist, most are intended for use by energy-conscious application developers and not for end users [1] [2]. 
+While power analyzing applications exist, most are intended for use by energy-conscious application developers but not for end users \cite{eprof} \cite{energy-aware}. 
 Of the power saving applications available for end users, some complain of the applications being too intrusive. 
 These applications disable important features of the phone without user consent and make practical usage very difficult. 
 Allowing the user to set a target ``no-charge-until" goal time, and then guiding the user towards decisions to achieve this goal, would enable more efficient and productive use of mobile devices.
