final push it real good

--- a/docs/draft/main.tex
+++ b/docs/draft/main.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,twocolumn]{article}
+\documentclass[11pt,pdftex,twocolumn]{article}
 \usepackage{alltt}
 \usepackage[dvips]{graphicx}
 \usepackage{verbatim}
