--- a/docs/draft/motivation.tex
+++ b/docs/draft/motivation.tex
@@ -1,3 +1,15 @@
 \section*{Motivation}
 \label{sec:motivation}
 % lazy App programmers -- CPU, Network I/O
+Mobile devices, including smart phones and tablets, are nearly ubiquitous, and function as an integral part of modern life. 
+These devices are capable of performing an ever-increasing array of tasks. 
+Unfortunately, short battery life severely limits the full potential of mobile devices. 
+As battery technology lags behind increasing demands, devices need intelligent use of its power resource. 
+Unfortunately, many application developers do not take into account these power limitations, or even realize the power draws of their applications on disparate devices. 
+A user may experience erratic power surges based on different applications and might not know if his or her device will last until the next opportunity to recharge. 
+
+While power analyzing applications exist, many are intended to aid application developers rather than end users \cite{Pathak:2012:ESI:2168836.2168841} \cite{energy-aware}. 
+Of the power saving applications available for users, some complain of the applications being too intrusive. 
+These applications disable important features of the phone without user knowledge and make practical usage of the device very difficult. 
+Compounding this problem, common users remain blissfully unaware of their power use until their phone reaches a minimum battery threshold.
+This need for an application to inform the user of high usage applications is what motivated the work behind \emph{Watt's Happening}.
