--- a/docs/draft/conclusion.tex
+++ b/docs/draft/conclusion.tex
@@ -1,13 +1,8 @@
 \section*{Conclusion}
-%Watt's Happening demonstrates the potential for an application existing exclusively in user space to monitor, log, and analyze the actions of other applications.  
-%While the scope of the project had to be limited due to time constraints, we feel that the proof of concept has been achieved.  
-%The resource managers provided by Android allows for independent application oversight.
-%We started by examining what device resources we had access to and determining the possibility of 
-%relating resource depletion to specific user applications.  
-%Our observations based on the logged data allowed for empirical analysis and eventual recommendations.  
-%The result is an informed user that is capable of extending the device's battery.
 
-
-The \emph{Watt's Happening} application aids users in extending the battery life of their mobile device.
+\emph{Watt's Happening} demonstrates the potential for an application existing exclusively in user space to log and analyze the actions of other applications.  
+The result is an application that aids users in extending the battery life of their mobile device.
 It does this by tracking application usage of important resources such as CPU and network communications.
-This  provides us with relevant short and long term resource usage which 
+This provides the user with relevant short and long term resource usage compressed into an estimated time remaining.
+If the user desires to extend that time remaining, \emph{Watt's Happening} conveniently displays the currently running applications sorted by resource usage.
+Our application assists users' continuing demand for longer lasting mobile devices by indicating resource intense applications. \emph{Watt's Happening} assists the user in  
