--- a/docs/draft/design.tex
+++ b/docs/draft/design.tex
@@ -1,4 +1,5 @@
 \section*{Design}
+\label{sec:design}
 %\subsection*{Assumptions}
 %	short-running processes will have their battery usage amortized over longer running apps.
 % could check all apps (instead of just running apps at snapshot),
