--- a/docs/draft/conclusion.tex
+++ b/docs/draft/conclusion.tex
@@ -5,4 +5,4 @@ The result is an application that aids users in extending the battery life of th
 It does this by tracking application usage of important resources such as CPU and network communications.
 This provides the user with relevant short and long term resource usage compressed into an estimated time remaining.
 If the user desires to extend that time remaining, \emph{Watt's Happening} conveniently displays the currently running applications sorted by resource usage.
-Our application assists users' continuing demand for longer lasting mobile devices by indicating resource intense applications. \emph{Watt's Happening} assists the user in  
+Our application assists users' continuing demand for longer lasting mobile devices by indicating resource intense applications. %\emph{Watt's Happening} assists the user in  
