--- a/docs/draft/conclusion.tex
+++ b/docs/draft/conclusion.tex
@@ -1,5 +1,5 @@
 \section*{Conclusion}
-
+\label{sec:conclusion}
 \emph{Watt's Happening} demonstrates the potential for an application existing exclusively in user space to log and analyze the actions of other applications.  
 The result is an application that aids users in extending the battery life of their mobile device.
 It does this by tracking application usage of important resources such as CPU and network communications.
